# image3kit

./: .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  README_installation.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: conda.yml  pip.yml  wheels.yml
cmake/: PackageConfig.cmake  image3kitConfig.cmake.in
conda.recipe/: meta.yaml
pkgs/: README.md
pkgs/optim/: NelderMeadPar.h  cmaes.h  newuoa.h
pkgs/optim/examples/: NelderMeadPar.cpp  NelderMeadPar_example.cpp  ObjFunction.h  cmaes_example1.cpp  newuoa_example_closure.cpp
pkgs/optim/primitives/: Tnsr.h  Vctr.h  main.cpp
pkgs/stb/: stb_image.h  stb_image_write.h
pkgs/svplot/: README.md  svg_color.hpp  svg_elements.hpp  svg_elements_extra.hpp  svgraphic.hpp  svplot.hpp  svplot_axes.hpp  svplot_axis_x.hpp  svplot_axis_y.hpp  svplot_chain_set.hpp  svplot_draw.hpp  svplot_elems.hpp  theme.hpp  trash.hpp
pkgs/svplot/example/: demo_svplot.cpp  makefile
pkgs/zlib/: zfstream.h
src/: VxlImgXX.hpp  bind_VxlImgF32.cpp  bind_VxlImgI32.cpp  bind_VxlImgU16.cpp  bind_VxlImgU8.cpp  bind_common.hpp  image3d_core.cpp  vxlPyU8.cpp  vxlPyUX.hpp
src/_include/: CMakeLists.txt  IOUtils.h  InputFile.h  README.md  SiRun.cpp  SiRun.h  globals.h  instream.h  profilers.h  test_input.cpp  test_sirun.cpp  typses.h
src/_optim/: NelderMeadPar.h  cmaes.h
src/_optim/examples/: NelderMeadPar.cpp  NelderMeadPar_example.cpp  cmaes_example1.cpp  cmaes_example2.cpp  newuoa.cpp  newuoa_example_function.c
src/_optim/primitives/: Tnsr.h  Vctr.h  main.cpp
src/_svplot/: README.md  makefile  svg_color.hpp  svg_elements.hpp  svg_elements_extra.hpp  svgraphic.hpp  svplot.hpp  svplot_axis_x.hpp  svplot_axis_y.hpp  svplot_draw.hpp  svplot_elems.hpp  theme.hpp
src/_voxlib/: CMakeLists.txt  KozenyCarman.h  Makefile  VxlStrips.cpp  VxlStrips.h  performance.cpp  randsToVoxel.h  shapeToVoxel.h  voxLaplace.c  voxelEndian.h  voxelGrad.cpp  voxelImage.cpp  voxelImage.h  voxelImageCutOutside.h  voxelImageI.h  voxelImageML.h  voxelImageProcPy.cpp  voxelImageProcess.cpp  voxelImageProcess.h  voxelImageRegister.h  voxelNoise.h  voxelPng.h  voxelPng_lpng.h  voxelPng_stbi.h  voxelRegions.h  voxelTiff.h  voxelTime.h  vxlPro.cpp  vxlPro1.cpp  vxlPro2.cpp  zfstream.h
src/_vxlToFoam/: voxelToFoam.cpp  voxelToFoamPar.cpp  voxelToFoamPar_seq.cpp
src/_vxlToSurf/: smoothGauss.cpp  surfUtils.h  voxelSurface.cpp  voxelSurface_write.cpp  voxelToSurfMesh.cpp
src/image3kit/: __init__.py  __init__.pyi
src/image3kit/_core/: __init__.pyi  sirun.pyi  voxlib.pyi
src/voxlib/: __init__.py  __init__.pyi  _core.pyi
tests/: test_2to3d.py  test_basic.py  test_operators.py  test_tiff.py
